Rails World 2024: Speaker spacing issue in session card

--- a/_sass/world/2024/modules/_agenda.scss
+++ b/_sass/world/2024/modules/_agenda.scss
@@ -29,6 +29,7 @@
   max-width: 1300px;
   align-items: center;
   justify-content: center;
+
 }
 
 @media screen and (max-width: 900px) {
@@ -96,9 +97,8 @@
   display: flex;
   flex-direction: column;
   background-color: var(--white);
-  border-radius: 0 0px 10px 10px;
+  border-radius: 0 0 10px 10px;
   width: 100%;
-  padding-bottom: 10px;
 }
 
 .sessionRow {
@@ -138,23 +138,34 @@
 
     .title {
       font-weight: 600;
+
       color: var(--purple);
     }
 
     .speakersContainer {
       display: flex;
 
-      .speakerName {
+      .speakerNames {
         font-size: var(--type-small);
+
+        .name {
+          font-weight: 500;
+        }
       }
     }
   }
+
+  &:last-child {
+    border-bottom: none;
+    border-radius: 0 0 10px 10px;
+  }
+
+  &:hover {
+    background-color: rgb(242, 242, 242);
+  }
+
+  @media screen and (max-width: 650px) {
+    padding: 5px 0;
+  }
 }
 
-.sessionRow:last-child {
-  border-bottom: none;
-}
-
-.sessionRow:hover {
-  background-color: rgb(242, 242, 242);
-}
